# neutron_diffusion_finite_differences

./: .gitignore  .gitmodules  CMakeLists.txt  plot_1d_2groups.gp  plot_3d.gp  plot_4d.gp
src/main/: main_1d_keff.cc  main_1d_keff_2_groups.cc  main_1d_keff_control_rod.cc  main_1d_source.cc  main_2d_keff.cc  main_3d_keff.cc  main_3d_keff_control_rod.cc  main_template.cc
